--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules
-__TEST_TMP__
+__TEST_TMP__*
 generator.js
+src/*.js
 *.tgz
 
 # Ignore eventyrhing in the prisma folder except the example
