refactor: Update project structure to output compiled files to 'dist'
- Modify .gitignore to ignore 'dist' and all JavaScript files.
- Change package.json to set 'dist/generator.js' as the main entry point and update bin command.
- Update tsconfig.build.json to specify 'dist' as the output directory for compiled files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 node_modules
 __TEST_TMP__*
 generator.js
-src/*.js
+dist/*
+*.js
 *.tgz
 
 # Ignore eventyrhing in the prisma folder except the example
