--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,7 @@
 {
 	"extends": "./tsconfig.json",
-	"include": ["generator.ts"]
+	"include": ["generator.ts"],
+	"compilerOptions": {
+		"outDir": "dist"
+	}
 }
